@@ -36,6 +36,7 @@ Date: 5/12/25
   Optimizations:
     - Decreased batch sizes and processing intervals, smoothing gameplay on large saves.
     - Decreased number of layout updates in the trade overview for the same number of trades listed.
+    - Optimized filtering methods in trade overview.
 ---------------------------------------------------------------------------------------------------
 Version: 1.2.1
 Date: 27/11/25
